force-app/main/default/objects/Assessment_Session__c/Assessment_Session__c.object-meta.xml
<CustomObject>
    <label>Assessment Session</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Assessment Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>