force-app/main/default/objects/Assessment_Session__c/fields/Assessment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Definition</label>
    <referenceTo>Assessment_Definition__c</referenceTo>
    <relationshipLabel>Assessment Sessions</relationshipLabel>
    <relationshipName>Assessment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>