force-app/main/default/objects/Assessment_Session__c/fields/Source_Transcript_Deletion_Error__c.field-meta.xml
<CustomField>
    <fullName>Source_Transcript_Deletion_Error__c</fullName>
    <label>Source Transcript Deletion Error</label>
    <type>TextArea</type>
</CustomField>