force-app/main/default/objects/Assessment_Session__c/fields/Source_Transcript_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_Transcript_Deletion_Status__c</fullName>
    <label>Source Transcript Deletion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>