force-app/main/default/objects/Assessment_Session__c/fields/Source_Transcript_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Transcript_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source Transcript Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>