force-app/main/default/objects/Assessment_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Definition__c</columns>
    <columns>Source_Transcript_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Processed__c</columns>
    <columns>Source_Transcript_Deletion_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>